<resources>
    <string name="app_name">NasaSpaceSight</string>
    <string name="exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_query">Search Query</string>
    <string name="title">Title</string>
    <string name="key_words">Key Words</string>
    <string name="location">Location</string>
    <string name="photographer">Photographer</string>
    <string name="search_by_date">Search By Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="the_photographer_s_name_optional">The Photographer\'s Name (Optional)</string>
    <string name="capturing_location_optional">Capturing Location (Optional)</string>
    <string name="attached_text_description_optional">Attached Text Description (Optional)</string>
    <string name="seperated_by_comma_optional">KeyWords Separated By Comma \',\' (Optional)</string>
    <string name="title_of_the_image_optional">Title Of The Image (Optional)</string>
    <string name="main_search_text_required">Main Search Text (Required)</string>
    <string name="viewed">Viewed</string>
    <string name="reset">Reset</string>
    <string name="search">Search</string>
    <string name="sorry_something_went_wrong">Sorry, Something Went Wrong!!</string>
    <string name="description">Description</string>
    <string name="description_withcomma">Description:</string>
    <string name="nasaid">NasaID:</string>
    <string name="capturing_center">Capturing Center:</string>
    <string name="date_created">Date Created:</string>
    <string name="photographer_withcomma">Photographer:</string>
    <string name="download_hq">Download HQ</string>
    <string name="download_mq">Download MQ</string>
    <string name="download">Download</string>
    <string name="download_quality">Download Quality</string>
    <string name="high">High</string>
    <string name="normal">Normal</string>
    <string name="explore_images_from_the_nasa_api_centers">Explore Images From the NASA API Centers</string>
    <string name="downloading">Downloading...</string>
    <string name="cancel_downloading">Cancel Downloading</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="nasa_images">Nasa Images</string>
    <string name="explore_millions_of_images_night_sky_stars_planets_and_more">Explore Millions Of Images. \nNight Skies, Stars, Planets And More.</string>
    <string name="fetching_more_images">Fetching More Images...</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="images">Images</string>
    <string name="search_more_than_200_000_pics">Search More Than 200,000 Pics</string>
    <string name="share">Share</string>
    <string name="please_wait_image_to_load">Please Wait The Image To Load</string>
    <string name="share_image">Share Image</string>
    <string name="photo_of_the_day">Photo Of The Day</string>
    <string name="single_date">Single Date</string>
    <string name="range_date">Range Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="single_photo_by_date">Single Photo By Date</string>
    <string name="click_to_choose_date">Click To Choose Date</string>
    <string name="any_available_image_provided_by_this_app_is_owned_by_nasa_data_centers_this_app_only_provides_a_simplified_representation_of_nasa_s_image_apis_nthis_app_is_designed_for_educational_purposes_only">Any available image provided by this app is owned by NASA data centers, This app only provides a simplified representation of NASA\'s image APIs.  This App is designed for educational purposes only.</string>
    <string name="date_must_be_after_1997">Start Date Must be After 1997</string>
    <string name="date_must_be_older">Start Date Must Be Older End Date</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="source_code">Source Code</string>
    <string name="nasa_space_sight">Nasa Space Sight</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="potd_offline">POTD Offline</string>
    <string name="images_offline">Images Offline</string>
    <string name="history">History</string>
</resources>
