<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.SearchFragment">


    <LinearLayout
        style="@style/MatchMatchLayout"
        android:padding="@dimen/marginDefaultNormal"
        android:orientation="vertical">

        <Button
            android:id="@+id/exit_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:background="@drawable/ic_close_black_24dp" />

        <LinearLayout
            style="@style/WrapMatchLayout"
            android:layout_marginTop="@dimen/marginDefaultNormal"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:text="@string/search_query" />

            <EditText
                android:id="@+id/query"
                style="@style/EditText"
                android:layout_width="0dp"
                android:padding="10dp"

                android:layout_weight="0.7"
                android:hint="@string/main_search_text_required" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/marginDefaultNormal"

            style="@style/WrapMatchLayout"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView.CenterBlack"
                android:layout_width="0dp"
                android:layout_weight="0.3"

                android:text="@string/title" />

            <EditText
                android:id="@+id/title_search"
                style="@style/EditText"
                android:layout_width="0dp"
                android:padding="10dp"

                android:layout_weight="0.7"
                android:hint="@string/title_of_the_image_optional"

                />

        </LinearLayout>

        <LinearLayout
            style="@style/WrapMatchLayout"
            android:layout_marginTop="@dimen/marginDefaultNormal"

            android:orientation="horizontal">

            <TextView
                style="@style/TextView.CenterBlack"
                android:layout_width="0dp"
                android:layout_weight="0.3"

                android:text="@string/key_words" />

            <EditText
                android:id="@+id/keywords"
                style="@style/EditText"
                android:layout_width="0dp"
                android:padding="10dp"

                android:layout_weight="0.7"
                android:hint="@string/seperated_by_comma_optional" />

        </LinearLayout>

        <LinearLayout
            style="@style/WrapMatchLayout"
            android:layout_marginTop="@dimen/marginDefaultNormal"

            android:orientation="horizontal">

            <TextView
                style="@style/TextView.CenterBlack"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:text="@string/description" />

            <EditText
                android:id="@+id/description"
                android:padding="10dp"

                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_weight="0.7"

                android:hint="@string/attached_text_description_optional" />

        </LinearLayout>

        <LinearLayout
            style="@style/WrapMatchLayout"
            android:layout_marginTop="@dimen/marginDefaultNormal"

            android:orientation="horizontal">

            <TextView
                style="@style/TextView.CenterBlack"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:text="@string/location" />

            <EditText
                android:id="@+id/location"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:padding="10dp"

                android:hint="@string/capturing_location_optional" />

        </LinearLayout>

        <LinearLayout
            style="@style/WrapMatchLayout"
            android:layout_marginTop="@dimen/marginDefaultNormal"

            android:orientation="horizontal">

            <TextView
                style="@style/WrapWrapLayout"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:text="@string/photographer" />

            <EditText
                android:id="@+id/photographer_name"
                style="@style/EditText"
                android:layout_width="0dp"
                android:padding="10dp"

                android:layout_weight="0.7"
                android:hint="@string/the_photographer_s_name_optional" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/date_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/search_by_date" />

        <LinearLayout
            android:id="@+id/date_search_layout"
            style="@style/WrapMatchLayout"
            android:layout_marginTop="@dimen/marginDefaultNormal"

            android:orientation="horizontal">

            <TextView
                style="@style/TextView.CenterBlack"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:text="@string/from" />

            <Spinner
                android:id="@+id/year_start"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_marginEnd="@dimen/paddingDefault"
                android:padding="@dimen/paddingDefault"
                android:layout_marginStart="@dimen/paddingDefault"

                android:layout_height="match_parent"
                style="@style/Spinners" />

            <TextView
                style="@style/TextView.CenterBlack"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:text="@string/to" />

            <Spinner
                style="@style/Spinners"
                android:layout_marginEnd="@dimen/paddingDefault"
                android:layout_marginStart="@dimen/paddingDefault"
                android:padding="@dimen/paddingDefault"

                android:id="@+id/year_end"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:paddingStart="10dp" />
        </LinearLayout>

        <LinearLayout
            style="@style/WrapMatchLayout"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/marginDefaultLarge"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reset_button"
                android:layout_width="match_parent"
                style="@style/Button"
                android:layout_marginEnd="@dimen/marginDefaultNormal"

                android:layout_weight="1"
                android:text="@string/reset" />

            <Button

                android:layout_weight="1"
                android:layout_marginStart="@dimen/marginDefaultNormal"
                android:layout_width="match_parent"
                android:id="@+id/button_search"
                style="@style/Button.Acceptance"
                android:text="@string/search" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>