<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.NIL.ImageDetailsActivityNIL">


    <LinearLayout

        style="@style/WrapMatchLayout"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/image_activity_toolbar"

            android:background="@color/colorPrimary"
            app:titleTextColor="@color/primaryTextColor"
            android:foregroundTint="@color/primaryTextColor"

            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <LinearLayout
            android:id="@+id/main_error_linear"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_error_textview"
                style="@style/TextView"
                android:text="@string/sorry_something_went_wrong"
                android:textSize="@dimen/PrimaryTextSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_layout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <com.github.chrisbanes.photoview.PhotoView
                    android:id="@+id/image_imageactivity"
                    style="@style/ImageView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/normalImageHeight"
                    android:scaleType="center"
                    android:src="@drawable/ic_refresh_black_24dp"
                    android:visibility="visible" />

                <ProgressBar
                    android:id="@+id/img_prog"
                    style="@style/ProgressBar"
                    android:layout_centerInParent="true"
                    android:visibility="visible" />

            </RelativeLayout>

            <TextView
                style="@style/TextView.StartBlack"
                android:padding="@dimen/paddingDefault"
                android:text="@string/description_withcomma" />

            <TextView
                android:id="@+id/description_textview"
                style="@style/TextView.StartMatchSecond"
                android:padding="@dimen/paddingDefault"

                android:paddingStart="@dimen/marginDefaultLarge" />


            <TextView
                style="@style/TextView.StartBlack"
                android:padding="@dimen/paddingDefault"
                android:text="@string/photographer_withcomma" />

            <TextView
                android:id="@+id/photographer_name_textview"
                style="@style/TextView.StartMatchSecond"
                android:padding="@dimen/paddingDefault"

                android:paddingStart="@dimen/marginDefaultLarge" />


            <TextView
                style="@style/TextView.StartBlack"
                android:padding="@dimen/paddingDefault"
                android:text="@string/date_created" />

            <TextView
                android:id="@+id/date_created_textview"
                style="@style/TextView.StartMatchSecond"
                android:padding="@dimen/paddingDefault"
                android:paddingStart="@dimen/marginDefaultLarge" />


            <TextView

                style="@style/TextView.StartBlack"
                android:padding="@dimen/paddingDefault"

                android:text="@string/capturing_center" />

            <TextView
                android:id="@+id/center_captured_textview"
                style="@style/TextView.StartMatchSecond"

                android:padding="@dimen/paddingDefault"
                android:paddingStart="@dimen/marginDefaultLarge" />


            <TextView
                style="@style/TextView.StartBlack"
                android:padding="@dimen/paddingDefault"
                android:text="@string/nasaid" />

            <TextView
                android:id="@+id/nasa_id_textview"
                style="@style/TextView.StartMatchSecond"
                android:padding="@dimen/paddingDefault"

                android:paddingStart="@dimen/marginDefaultLarge" />

            <LinearLayout
                android:id="@+id/download_cancel_layout"
                style="@style/WrapMatchLayout"
                android:orientation="vertical"
                android:padding="@dimen/marginDefaultLarge"
                android:visibility="gone">

                <TextView
                    style="@style/TextView.CenterBlack"
                    android:text="@string/downloading" />

                <ProgressBar
                    android:id="@+id/download_progress_bar"
                    style="?android:progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/paddingDefault"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/cancel_downloading"
                    style="@style/Button"
                    android:layout_gravity="center"
                    android:text="@string/cancel_downloading" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/download_buttons_layout"
                style="@style/WrapMatchLayout"

                android:orientation="vertical">

                <TextView
                    style="@style/TextView"
                    android:text="@string/download_quality"
                    android:textSize="@dimen/PrimaryTextSize" />

                <LinearLayout
                    style="@style/WrapMatchLayout"
                    android:gravity="center"

                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/download_button_mq"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/paddingDefault"
                        android:layout_weight="1"

                        android:enabled="false"
                        android:padding="@dimen/paddingDefault"
                        android:text="@string/normal" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/download_button_hq"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="@dimen/paddingDefault"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:padding="@dimen/paddingDefault"
                        android:text="@string/high" />
                </LinearLayout>


            </LinearLayout>

            <TextView
                style="@style/TextView.StartMatchSecond"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/any_available_image_provided_by_this_app_is_owned_by_nasa_data_centers_this_app_only_provides_a_simplified_representation_of_nasa_s_image_apis_nthis_app_is_designed_for_educational_purposes_only" />


        </LinearLayout>
    </LinearLayout>

</ScrollView>